# wordfall

./: .gitignore  Cargo.toml  index.html  make_deny_list.py  make_words_rs.py  readme.md  words.txt  words_deny_list.txt  words_deny_list_3.txt  words_deny_list_4.txt  words_dev.txt  words_extra.txt
.github/workflows/: continuous_deployment.yml
src/: LICENSE.md  header.rs  letter_gen.rs  main.rs  scoring.rs  seed.rs  styles.module.scss  trie.rs  words.rs
styles/: bundled.scss
